--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/jest": "^23.0.0",
     "jest": "^23.1.0",
     "ts-jest": "^22.4.6",
-    "typescript": "^2.9.1"
+    "typescript": "^2.9.1",
+    "vuex": "^3.0.1"
   }
 }
