--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jest": "^23.1.0",
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.1",
+    "vue": "^2.5.16",
     "vuex": "^3.0.1"
   }
 }
