--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "autotest": "npm test -- --watch",
     "patch": "npm version patch && npm publish && git push",
-    "toc": "markdown-toc -i README.md"
+    "toc": "markdown-toc -i README.md --maxdepth=3"
   },
   "repository": {
     "type": "git",
