--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "homepage": "https://github.com/eunjae-lee/vuex-dry#readme",
   "devDependencies": {
     "@types/jest": "^23.0.0",
+    "@vue/test-utils": "^1.0.0-beta.18",
     "bili": "^3.1.2",
     "jest": "^23.1.0",
     "markdown-toc": "^1.2.0",
@@ -40,6 +41,7 @@
     "ts-jest": "^22.4.6",
     "typescript": "^2.9.1",
     "vue": "^2.5.16",
+    "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1"
   }
 }
