Fix a bug where it cannot set nested properties correctly

--- a/package.json
+++ b/package.json
@@ -44,5 +44,13 @@
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1"
+  },
+  "dependencies": {
+    "@types/lodash.get": "^4.4.3",
+    "@types/lodash.has": "^4.5.3",
+    "@types/lodash.merge": "^4.6.3",
+    "lodash.get": "^4.4.2",
+    "lodash.has": "^4.5.2",
+    "lodash.merge": "^4.6.1"
   }
 }
